openproject_kubernetes/seeder-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/backend: "true"
    io.kompose.service: seeder
  name: seeder
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: app
            operator: In
            values:
            - openproject
  containers:
  - args:
    - ./docker/seeder
    image: openproject/community:10
    name: seeder
    resources: {}
    volumeMounts:
    - mountPath: /var/openproject/assets
      name: opdata
  restartPolicy: OnFailure
  volumes:
  - name: opdata
    persistentVolumeClaim:
      claimName: opdata
status: {}
