openproject_kubernetes/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: worker
    spec:
      affinity:  
        nodeAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 1
             preference:
               matchExpressions:
               - key: app
                 operator: In
                 values:
                 - openproject
      containers:
      - args:
        - ./docker/worker
        image: openproject/community:10
        imagePullPolicy: ""
        name: worker
        resources: {}
        volumeMounts:
        - mountPath: /var/openproject/assets
          name: opdata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: opdata
        persistentVolumeClaim:
          claimName: opdata
status: {}
