openproject_kubernetes/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
spec:
  ports:
  - name: "11211"
    port: 11211
    targetPort: 11211
  selector:
    io.kompose.service: cache
