openproject_kubernetes/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    io.kompose.service: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    io.kompose.service: db
