openproject_kubernetes/ingress-forntend.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: traefik
  #  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - hosts:
    - cloud.openproj.local
    secretName: testsecret-tls      
  rules:
  - host: cloud.openproj.local 
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service-openproject
          servicePort: 8080
  - host: owncloud.ivolve.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: owncloud
          servicePort: 8080
  - host: rocket.ivolve.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rocketchat
          servicePort: 3000
  - host: jitsi.ivolve.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service-jitsi
          servicePort: 80
